--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,20 @@
   <groupId>RestAssuredAPI_Testing</groupId>
   <artifactId>RestAssuredAPI_Testing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.5.5</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+  </dependencies>
 </project>
